fix: fix some corner cases and refactor