@@ -4,7 +4,7 @@ import com.netcracker.cloud.routesregistration.common.annotation.Gateway;
 import com.netcracker.cloud.routesregistration.common.annotation.Route;
 import com.netcracker.cloud.routesregistration.common.spring.gateway.route.annotation.GatewayRequestMapping;
 import io.github.classgraph.*;
-import jakarta.ws.rs.Path;
+import jakarta.ws.rs.*;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.logging.Log;
 import org.apache.maven.project.MavenProject;
@@ -12,14 +12,25 @@ import org.springframework.web.bind.annotation.*;
 
 import java.io.File;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
 
 /**
  * Scans compiled classes to collect HttpRoute definitions based on annotations.
  */
 public class RouteScanner {
+
+    private static final Set<Class<?>> SPRING_HTTP_ANNOTATIONS = Set.of(
+            RequestMapping.class, GetMapping.class, PostMapping.class,
+            PutMapping.class, DeleteMapping.class, PatchMapping.class
+    );
+
+    private static final Set<Class<?>> JAX_RS_HTTP_ANNOTATIONS = Set.of(
+            GET.class, POST.class, PUT.class, DELETE.class, PATCH.class
+    );
+
+    private static final String ROUTE_ANNOTATION = Route.class.getName();
+    private static final String GATEWAY_ANNOTATION = Gateway.class.getName();
+    private static final String GATEWAY_REQUEST_MAPPING = GatewayRequestMapping.class.getName();
 
     private final String[] packages;
     private final Log log;
@@ -45,71 +56,76 @@ public class RouteScanner {
             return Collections.emptySet();
         }
 
-        try (ScanResult scan = new ClassGraph()
-                .enableAllInfo()
-                .overrideClasspath(classesDir.getAbsolutePath())
-                .acceptPackages(packages)
-                .scan()) {
-
-            Stream<ClassInfoList> pathsStream;
-            if (isSpringUsed(scan)) {
-                pathsStream = Stream.of(
-                        scan.getClassesWithMethodAnnotation(RequestMapping.class),
-                        scan.getClassesWithAnnotation(RequestMapping.class),
-                        scan.getClassesWithMethodAnnotation(GetMapping.class),
-                        scan.getClassesWithAnnotation(GetMapping.class),
-                        scan.getClassesWithMethodAnnotation(PostMapping.class),
-                        scan.getClassesWithAnnotation(PostMapping.class),
-                        scan.getClassesWithMethodAnnotation(PutMapping.class),
-                        scan.getClassesWithAnnotation(DeleteMapping.class),
-                        scan.getClassesWithMethodAnnotation(DeleteMapping.class),
-                        scan.getClassesWithAnnotation(PutMapping.class),
-                        scan.getClassesWithMethodAnnotation(PatchMapping.class),
-                        scan.getClassesWithAnnotation(PatchMapping.class)
-                );
-            } else if (isQuarkusUsed(scan)) {
-                pathsStream = Stream.of(
-                        scan.getClassesWithMethodAnnotation(Path.class),
-                        scan.getClassesWithAnnotation(Path.class)
-                );
-            } else {
-                return Set.of();
+        try (ScanResult scan = createScanResult(classesDir)) {
+            FrameworkType framework = detectFramework(scan);
+            if (framework == FrameworkType.NONE) {
+                log.info("No supported framework detected (Spring or Quarkus)");
+                return Collections.emptySet();
             }
 
-            return pathsStream
-                    .flatMap(Collection::stream)
-                    .distinct()
-                    .map(this::getRequestMappingPaths)
-                    .flatMap(Collection::stream)
-                    .collect(Collectors.toSet());
+            return scanClassesForRoutes(scan, framework);
         } catch (Exception e) {
             throw new MojoExecutionException("Failed scanning annotations", e);
         }
     }
 
+    private ScanResult createScanResult(File classesDir) {
+        return new ClassGraph()
+                .enableAllInfo()
+                .overrideClasspath(classesDir.getAbsolutePath())
+                .acceptPackages(packages)
+                .disableRuntimeInvisibleAnnotations()
+                .scan();
+    }
+
+    private FrameworkType detectFramework(ScanResult scan) {
+        if (isSpringUsed(scan)) {
+            return FrameworkType.SPRING;
+        }
+        if (isQuarkusUsed(scan)) {
+            return FrameworkType.QUARKUS;
+        }
+        return FrameworkType.NONE;
+    }
+
+    private Set<HttpRoute> scanClassesForRoutes(ScanResult scan, FrameworkType framework) {
+        return getAnnotatedClasses(scan, framework)
+                .distinct()
+                .filter(this::hasRoute)
+                .flatMap(classInfo -> getRequestMappingPaths(classInfo).stream())
+                .collect(java.util.stream.Collectors.toSet());
+    }
+
+    private Stream<ClassInfo> getAnnotatedClasses(ScanResult scan, FrameworkType framework) {
+        Set<Class<?>> annotations = framework == FrameworkType.SPRING
+                ? SPRING_HTTP_ANNOTATIONS
+                : JAX_RS_HTTP_ANNOTATIONS;
+
+        if (framework == FrameworkType.QUARKUS) {
+            return Stream.concat(
+                    getClassesWithAnnotations(scan, Set.of(Path.class)),
+                    getClassesWithAnnotations(scan, annotations)
+            );
+        }
+
+        return getClassesWithAnnotations(scan, annotations);
+    }
+
+    private Stream<ClassInfo> getClassesWithAnnotations(ScanResult scan, Set<Class<?>> annotations) {
+        return annotations.stream()
+                .flatMap(annotation -> Stream.concat(
+                        scan.getClassesWithMethodAnnotation(annotation.getName()).stream(),
+                        scan.getClassesWithAnnotation(annotation.getName()).stream()
+                ));
+    }
+
     public Set<HttpRoute> getRequestMappingPaths(ClassInfo classInfo) {
         log.info("Get Request Mappings for Class: " + classInfo.getName());
 
-        Optional<HttpRoute.Type> classRouteType = getRouteType(classInfo.getAnnotationInfo(Route.class.getName()));
-        Optional<Long> classRouteTimeout = getRouteTimeout(classInfo.getAnnotationInfo(Route.class.getName()));
+        RouteMetadata classMetadata = extractClassMetadata(classInfo);
+        Set<HttpRoute> routes = processMethodRoutes(classInfo, classMetadata);
 
-        List<String> classGatewayRequestMapping = resolveGatewayMappings(classInfo);
-        List<String> classesReqMappings = resolveRequestMappings(classInfo);
-
-        Set<HttpRoute> routes = classInfo.getMethodInfo().stream()
-                .flatMap(methodInfo -> methodInfo.getAnnotationInfo().stream()
-                        .filter(this::isHttpMappingAnnotation)
-                        .map(mappingAnn -> Map.entry(methodInfo, mappingAnn)))
-                .map(entry -> buildRoutesForMethod(
-                        entry.getKey(),
-                        entry.getValue(),
-                        classRouteType,
-                        classRouteTimeout,
-                        classGatewayRequestMapping,
-                        classesReqMappings))
-                .flatMap(Collection::stream)
-                .collect(Collectors.toSet());
-
+        // Process superclass routes
         if (classInfo.getSuperclass() != null) {
             routes.addAll(getRequestMappingPaths(classInfo.getSuperclass()));
         }
@@ -118,143 +134,264 @@ public class RouteScanner {
         return routes;
     }
 
-    private List<String> resolveGatewayMappings(ClassInfo classInfo) {
-        if (classInfo.hasAnnotation(GatewayRequestMapping.class.getName())) {
-            return getAnnotationPathFor(classInfo.getAnnotationInfo(GatewayRequestMapping.class.getName()));
+    private RouteMetadata extractClassMetadata(ClassInfo classInfo) {
+        return new RouteMetadata(
+                getRouteType(classInfo.getAnnotationInfo(ROUTE_ANNOTATION)),
+                getRouteTimeout(classInfo.getAnnotationInfo(ROUTE_ANNOTATION)),
+                resolveGatewayMappings(classInfo),
+                resolveRequestMappings(classInfo)
+        );
+    }
+
+    private Set<HttpRoute> processMethodRoutes(ClassInfo classInfo, RouteMetadata classMetadata) {
+        return classInfo.getMethodInfo().stream()
+                .flatMap(methodInfo -> getHttpMappingAnnotations(methodInfo)
+                        .map(mappingAnn -> Map.entry(methodInfo, mappingAnn)))
+                .flatMap(entry -> buildRoutesForMethod(
+                        entry.getKey(),
+                        entry.getValue(),
+                        classMetadata
+                ).stream())
+                .collect(java.util.stream.Collectors.toSet());
+    }
+
+    private Stream<AnnotationInfo> getHttpMappingAnnotations(MethodInfo methodInfo) {
+        AnnotationInfoList annotations = methodInfo.getAnnotationInfo();
+
+        // Prioritize specific mappings over @RequestMapping
+        List<AnnotationInfo> specificMappings = annotations.stream()
+                .filter(this::isHttpMappingAnnotation)
+                .toList();
+
+        // If we have specific mappings (@GetMapping, @PostMapping, etc.), use only those
+        if (!specificMappings.isEmpty()) {
+            return specificMappings.stream();
         }
-        return getAnnotationPathFor(classInfo.getAnnotationInfo(Gateway.class.getName()));
+
+        // Otherwise, look for @RequestMapping
+        return annotations.stream()
+                .filter(this::isRequestMappingAnnotation);
+    }
+
+    private boolean hasRoute(ClassInfo classInfo) {
+        return classInfo.hasAnnotation(Route.class) || classInfo.hasMethodAnnotation(Route.class);
+    }
+
+    private boolean isRequestMappingAnnotation(AnnotationInfo annotationInfo) {
+        return RequestMapping.class.getName().equals(annotationInfo.getName());
+    }
+
+    private List<String> resolveGatewayMappings(ClassInfo classInfo) {
+        if (classInfo.hasAnnotation(GATEWAY_REQUEST_MAPPING)) {
+            return getAnnotationPathFor(classInfo.getAnnotationInfo(GATEWAY_REQUEST_MAPPING));
+        }
+        return getAnnotationPathFor(classInfo.getAnnotationInfo(GATEWAY_ANNOTATION));
     }
 
     private List<String> resolveGatewayMappings(MethodInfo methodInfo) {
-        if (methodInfo.hasAnnotation(GatewayRequestMapping.class.getName())) {
-            return getAnnotationPathFor(methodInfo.getAnnotationInfo(GatewayRequestMapping.class.getName()));
+        if (methodInfo.hasAnnotation(GATEWAY_REQUEST_MAPPING)) {
+            return getAnnotationPathFor(methodInfo.getAnnotationInfo(GATEWAY_REQUEST_MAPPING));
         }
-        return getAnnotationPathFor(methodInfo.getAnnotationInfo(Gateway.class.getName()));
+        return getAnnotationPathFor(methodInfo.getAnnotationInfo(GATEWAY_ANNOTATION));
     }
 
     private List<String> resolveRequestMappings(ClassInfo classInfo) {
-        return Optional.ofNullable(classInfo.getAnnotationInfo(RequestMapping.class))
-                .or(() -> Optional.ofNullable(classInfo.getAnnotationInfo(GetMapping.class)))
-                .or(() -> Optional.ofNullable(classInfo.getAnnotationInfo(PostMapping.class)))
-                .or(() -> Optional.ofNullable(classInfo.getAnnotationInfo(PutMapping.class)))
-                .or(() -> Optional.ofNullable(classInfo.getAnnotationInfo(DeleteMapping.class)))
-                .or(() -> Optional.ofNullable(classInfo.getAnnotationInfo(PatchMapping.class)))
-                .or(() -> Optional.ofNullable(classInfo.getAnnotationInfo(Path.class)))
+        return Stream.of(
+                        RequestMapping.class, GetMapping.class, PostMapping.class,
+                        PutMapping.class, DeleteMapping.class, PatchMapping.class, Path.class
+                )
+                .map(Class::getName)
+                .map(classInfo::getAnnotationInfo)
+                .filter(Objects::nonNull)
+                .findFirst()
                 .map(this::getAnnotationPathFor)
                 .orElse(Collections.emptyList());
     }
 
     private boolean isHttpMappingAnnotation(AnnotationInfo annotationInfo) {
         String name = annotationInfo.getName();
-        return name.equals(RequestMapping.class.getName())
-                || name.equals(GetMapping.class.getName())
-                || name.equals(PostMapping.class.getName())
-                || name.equals(PutMapping.class.getName())
-                || name.equals(DeleteMapping.class.getName())
-                || name.equals(PatchMapping.class.getName())
-                || name.equals(Path.class.getName());
+        return GetMapping.class.getName().equals(name) ||
+                PostMapping.class.getName().equals(name) ||
+                PutMapping.class.getName().equals(name) ||
+                DeleteMapping.class.getName().equals(name) ||
+                PatchMapping.class.getName().equals(name) ||
+                GET.class.getName().equals(name) ||
+                POST.class.getName().equals(name) ||
+                PUT.class.getName().equals(name) ||
+                DELETE.class.getName().equals(name) ||
+                PATCH.class.getName().equals(name);
     }
 
     private Set<HttpRoute> buildRoutesForMethod(
             MethodInfo methodInfo,
             AnnotationInfo mappingAnn,
-            Optional<HttpRoute.Type> classRouteType,
-            Optional<Long> classRouteTimeout,
-            List<String> classGatewayRequestMapping,
-            List<String> classesReqMappings
+            RouteMetadata classMetadata
     ) {
-        HttpRoute.Type routeType = getRouteType(methodInfo.getAnnotationInfo(Route.class.getName()))
-                .orElse(classRouteType.orElse(HttpRoute.Type.INTERNAL));
-        long routeTimeout = getRouteTimeout(methodInfo.getAnnotationInfo(Route.class.getName()))
-                .orElse(classRouteTimeout.orElse(0L));
+        HttpRoute.Type routeType = getRouteType(methodInfo.getAnnotationInfo(ROUTE_ANNOTATION))
+                .orElse(classMetadata.routeType().orElse(HttpRoute.Type.INTERNAL));
 
-        List<String> methodGatewayRequestMapping = resolveGatewayMappings(methodInfo);
-        List<String> mappingPaths = getAnnotationPathFor(mappingAnn);
+        long routeTimeout = getRouteTimeout(methodInfo.getAnnotationInfo(ROUTE_ANNOTATION))
+                .orElse(classMetadata.routeTimeout().orElse(0L));
 
-        if (!classGatewayRequestMapping.isEmpty()) {
-            return buildClassGatewayRoutes(classGatewayRequestMapping, methodGatewayRequestMapping, classesReqMappings, mappingPaths, routeType, routeTimeout);
+        List<String> methodGatewayMappings = resolveGatewayMappings(methodInfo);
+        List<String> mappingPaths = resolveMappingPaths(methodInfo, mappingAnn);
+
+        if (!classMetadata.gatewayMappings().isEmpty()) {
+            return buildClassGatewayRoutes(
+                    classMetadata.gatewayMappings(),
+                    methodGatewayMappings,
+                    classMetadata.requestMappings(),
+                    mappingPaths,
+                    routeType,
+                    routeTimeout
+            );
         }
-        if (!methodGatewayRequestMapping.isEmpty()) {
-            return buildMethodGatewayRoutes(methodGatewayRequestMapping, classesReqMappings, mappingPaths, routeType, routeTimeout);
+
+        if (!methodGatewayMappings.isEmpty()) {
+            return buildMethodGatewayRoutes(
+                    methodGatewayMappings,
+                    classMetadata.requestMappings(),
+                    mappingPaths,
+                    routeType,
+                    routeTimeout
+            );
         }
 
-        if (classesReqMappings.isEmpty()) {
-            return mappingPaths.stream()
-                    .map(path -> new HttpRoute(path, routeType, routeTimeout))
-                    .collect(Collectors.toSet());
-        }
-
-        return classesReqMappings.stream()
-                .flatMap(classPrefix -> mappingPaths.stream()
-                        .map(methodPath -> new HttpRoute(classPrefix + methodPath, routeType, routeTimeout)))
-                .collect(Collectors.toSet());
+        return buildStandardRoutes(classMetadata.requestMappings(), mappingPaths, routeType, routeTimeout);
     }
 
-    private Set<HttpRoute> buildClassGatewayRoutes(
-            List<String> classGatewayRequestMapping,
-            List<String> methodGatewayRequestMapping,
-            List<String> classesReqMappings,
-            List<String> mappingPaths,
+    private List<String> resolveMappingPaths(MethodInfo methodInfo, AnnotationInfo mappingAnn) {
+        // Special handling for JAX-RS HTTP methods - get path from @Path annotation
+        if (JAX_RS_HTTP_ANNOTATIONS.stream().map(Class::getName).anyMatch(s -> s.equals(mappingAnn.getClassInfo().getName()))) {
+            List<String> paths = getAnnotationPathFor(methodInfo.getAnnotationInfo(Path.class.getName()));
+            return paths.isEmpty() ? List.of("") : paths;
+        }
+        return getAnnotationPathFor(mappingAnn);
+    }
+
+    private Set<HttpRoute> buildStandardRoutes(
+            List<String> classMappings,
+            List<String> methodMappings,
             HttpRoute.Type routeType,
             long routeTimeout
     ) {
-        if (methodGatewayRequestMapping.isEmpty()) {
-            methodGatewayRequestMapping = mappingPaths;
+        if (classMappings.isEmpty()) {
+            return methodMappings.stream()
+                    .map(path -> new HttpRoute(path, routeType, routeTimeout))
+                    .collect(java.util.stream.Collectors.toSet());
         }
-        String servicePrefix = classesReqMappings.getFirst();
-        String mappingPath = mappingPaths.getFirst();
-        List<String> finalMethodGatewayRequestMapping = methodGatewayRequestMapping;
-        return classGatewayRequestMapping.stream()
-                .flatMap(classPrefix -> finalMethodGatewayRequestMapping.stream()
+
+        return classMappings.stream()
+                .flatMap(classPrefix -> methodMappings.stream()
+                        .map(methodPath -> new HttpRoute(classPrefix + methodPath, routeType, routeTimeout)))
+                .collect(java.util.stream.Collectors.toSet());
+    }
+
+    private Set<HttpRoute> buildClassGatewayRoutes(
+            List<String> classGatewayMappings,
+            List<String> methodGatewayMappings,
+            List<String> classMappings,
+            List<String> methodMappings,
+            HttpRoute.Type routeType,
+            long routeTimeout
+    ) {
+        List<String> effectiveMethodMappings = methodMappings.isEmpty() ? List.of("/") : methodMappings;
+        List<String> effectiveMethodGatewayMappings = methodGatewayMappings.isEmpty()
+                ? effectiveMethodMappings
+                : methodGatewayMappings;
+
+        String servicePrefix = classMappings.isEmpty() ? "" : classMappings.get(0);
+        String mappingPath = effectiveMethodMappings.get(0);
+
+        return classGatewayMappings.stream()
+                .flatMap(classPrefix -> effectiveMethodGatewayMappings.stream()
                         .map(methodPath -> new HttpRoute(
                                 servicePrefix + mappingPath,
                                 classPrefix + methodPath,
                                 routeType,
                                 routeTimeout
                         )))
-                .collect(Collectors.toSet());
+                .collect(java.util.stream.Collectors.toSet());
     }
 
     private Set<HttpRoute> buildMethodGatewayRoutes(
-            List<String> methodGatewayRequestMapping,
-            List<String> classesReqMappings,
-            List<String> mappingPaths,
+            List<String> methodGatewayMappings,
+            List<String> classMappings,
+            List<String> methodMappings,
             HttpRoute.Type routeType,
             long routeTimeout
     ) {
-        if (methodGatewayRequestMapping.isEmpty() || mappingPaths.isEmpty()) {
+        if (methodGatewayMappings.isEmpty() || methodMappings.isEmpty()) {
             return Collections.emptySet();
         }
 
-        String servicePrefix = classesReqMappings.isEmpty() ? "" : classesReqMappings.getFirst();
-        String mappingPath = mappingPaths.getFirst();
-        return methodGatewayRequestMapping.stream()
-                .map(methodPath -> new HttpRoute(servicePrefix + mappingPath, methodPath, routeType, routeTimeout))
-                .collect(Collectors.toSet());
+        String servicePrefix = classMappings.isEmpty() ? "" : classMappings.get(0);
+        String mappingPath = methodMappings.get(0);
+
+        return methodGatewayMappings.stream()
+                .map(methodPath -> new HttpRoute(
+                        servicePrefix + mappingPath,
+                        methodPath,
+                        routeType,
+                        routeTimeout
+                ))
+                .collect(java.util.stream.Collectors.toSet());
     }
 
     private List<String> getAnnotationPathFor(AnnotationInfo annotationInfo) {
-        if (annotationInfo == null || annotationInfo.getParameterValues() == null || annotationInfo.getParameterValues().isEmpty()) {
+        if (annotationInfo == null) {
             return Collections.emptyList();
         }
-        if (annotationInfo.getParameterValues().getValue("value") instanceof String) {
-            return List.of((String) annotationInfo.getParameterValues().getValue("value"));
+
+        AnnotationParameterValueList parameters = annotationInfo.getParameterValues();
+        Object valueParam = parameters.getValue("value");
+        Object pathParam = parameters.getValue("path");
+
+        if (isNullOrEmpty(valueParam) && isNullOrEmpty(pathParam)) {
+            return List.of("");
         }
 
-        String[] paths = new String[]{};
-        if (annotationInfo.getParameterValues().getValue("path") != null) {
-            paths = Arrays.stream((Object[]) annotationInfo.getParameterValues().getValue("path"))
-                    .map(String.class::cast)
-                    .toArray(String[]::new);
+        // Handle single string values
+        if (valueParam instanceof String && !isNullOrEmpty(valueParam)) {
+            return List.of(valueParam.toString());
+        }
+        if (pathParam instanceof String && !isNullOrEmpty(pathParam)) {
+            return List.of(pathParam.toString());
         }
 
-        if (paths.length == 0) {
-            paths = Arrays.stream((Object[]) annotationInfo.getParameterValues().getValue("value"))
-                    .map(String.class::cast)
-                    .toArray(String[]::new);
-        }
+        // Handle array values - prefer "value" over "path"
+        return extractPathsFromParameter(parameters, "value")
+                .or(() -> extractPathsFromParameter(parameters, "path"))
+                .orElse(List.of(""));
+    }
 
-        return Arrays.asList(paths);
+    private boolean isNullOrEmpty(Object param) {
+        return switch (param) {
+            case null -> true;
+            case String s -> s.isEmpty();
+            case Object[] objects -> objects.length == 0;
+            default -> false;
+        };
+    }
+
+    private Optional<List<String>> extractPathsFromParameter(AnnotationParameterValueList parameters, String parameterName) {
+        Object paramValue = parameters.getValue(parameterName);
+
+        return switch (paramValue) {
+            case null -> Optional.empty();
+            case String s -> Optional.of(List.of(s));
+            case Object[] objects -> {
+                if (objects.length == 0) {
+                    yield Optional.empty();
+                }
+                List<String> paths = Arrays.stream(objects)
+                        .filter(String.class::isInstance)
+                        .map(String.class::cast)
+                        .toList();
+                yield paths.isEmpty() ? Optional.empty() : Optional.of(paths);
+            }
+            default -> Optional.empty();
+        };
     }
 
     private Optional<Long> getRouteTimeout(AnnotationInfo annotationInfo) {
@@ -273,29 +410,32 @@ public class RouteScanner {
                         Optional.ofNullable(params.getValue("type"))
                                 .or(() -> Optional.ofNullable(params.getValue("value")))
                 )
-                .filter(v -> v instanceof AnnotationEnumValue)
-                .map(v -> (AnnotationEnumValue) v)
-                .map(enumVal -> HttpRoute.Type.valueOf(enumVal.getValueName()))
-                .or(() -> Optional.of(HttpRoute.Type.INTERNAL));
+                .filter(AnnotationEnumValue.class::isInstance)
+                .map(AnnotationEnumValue.class::cast)
+                .map(enumVal -> HttpRoute.Type.valueOf(enumVal.getValueName()));
     }
 
     private boolean isSpringUsed(ScanResult scan) {
-        return !scan.getClassesWithMethodAnnotation(RequestMapping.class).isEmpty()
-                || !scan.getClassesWithAnnotation(RequestMapping.class).isEmpty()
-                || !scan.getClassesWithMethodAnnotation(GetMapping.class).isEmpty()
-                || !scan.getClassesWithAnnotation(GetMapping.class).isEmpty()
-                || !scan.getClassesWithMethodAnnotation(PostMapping.class).isEmpty()
-                || !scan.getClassesWithAnnotation(PostMapping.class).isEmpty()
-                || !scan.getClassesWithMethodAnnotation(PutMapping.class).isEmpty()
-                || !scan.getClassesWithAnnotation(PutMapping.class).isEmpty()
-                || !scan.getClassesWithMethodAnnotation(DeleteMapping.class).isEmpty()
-                || !scan.getClassesWithAnnotation(DeleteMapping.class).isEmpty()
-                || !scan.getClassesWithMethodAnnotation(PatchMapping.class).isEmpty()
-                || !scan.getClassesWithAnnotation(PatchMapping.class).isEmpty();
+        return SPRING_HTTP_ANNOTATIONS.stream()
+                .anyMatch(annotation ->
+                        !scan.getClassesWithMethodAnnotation(annotation.getName()).isEmpty() ||
+                                !scan.getClassesWithAnnotation(annotation.getName()).isEmpty()
+                );
     }
 
     private boolean isQuarkusUsed(ScanResult scan) {
-        return !scan.getClassesWithMethodAnnotation(Path.class).isEmpty()
-                || !scan.getClassesWithAnnotation(Path.class).isEmpty();
+        return !scan.getClassesWithMethodAnnotation(Path.class).isEmpty() ||
+                !scan.getClassesWithAnnotation(Path.class).isEmpty();
     }
+
+    private enum FrameworkType {
+        SPRING, QUARKUS, NONE
+    }
+
+    private record RouteMetadata(
+            Optional<HttpRoute.Type> routeType,
+            Optional<Long> routeTimeout,
+            List<String> gatewayMappings,
+            List<String> requestMappings
+    ) {}
 }
